<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Logo App -->
    <ImageView
        android:id="@+id/login_screen_logo_imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_logo_content_description"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/outline_book_ribbon_24"/>

    <!-- Title -->
    <TextView
        android:id="@+id/login_screen_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_login_screen"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_logo_imageView"
        app:layout_constraintStart_toStartOf="@+id/login_screen_logo_imageView"
        app:layout_constraintEnd_toEndOf="@+id/login_screen_logo_imageView" />

    <!-- Champ de texte email -->
    <!-- Parent component -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_screen_email_editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/email_text_input_hint"
        app:placeholderText="user@gmail.com"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_title_textView">
        <!-- Child component -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_screen_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Champ de texte mot de passe -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/password_login_page_hint_input_text"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_email_editTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_screen_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Boutton pour se connecter -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_screen_login_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/login_screen_login_button"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>